argo-apps/cloud/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: model-serving-ingress
  namespace: model-serving
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fraud.home.phuchoang.sbs`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: fraud-detection
          port: 8000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.phuchoang.sbs`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
